# kuka_calib

./: CMakeLists.txt  README.md  package.xml
calib/: camchain-2019-11-15-15-45-02.yaml
launch/: adjust.launch  artag_test.launch  calibrate_all.launch  calibration.launch
scripts/: kalibr_output_to_tf_sh_files.py
src/: extrinsic_calibration.cpp
